# advent_of_code

./: README.md  pyproject.toml
src/2021/day_/: part_1.py
src/2021/day_1/: part_1.py  part_2.py
src/2021/day_10/: part_1.py  part_2.py
src/2021/day_11/: part_1.py  part_2.py
src/2021/day_12/: part_1.py  part_2.py
src/2021/day_13/: part_1.py  part_2.py
src/2021/day_14/: part_1.py  part_2.py
src/2021/day_15/: part_1.py  part_2.py
src/2021/day_16/: part_1.py  part_2.py
src/2021/day_17/: part_1.py  part_2.py
src/2021/day_2/: part_1.py  part_2.py
src/2021/day_3/: part_1.py  part_2.py
src/2021/day_4/: part_1.py  part_2.py
src/2021/day_5/: part_1.py  part_2.py
src/2021/day_6/: part_1.py  part_2.py
src/2021/day_7/: part_1.py  part_2.py
src/2021/day_8/: part_1.py  part_2.py
src/2021/day_9/: part_1.py  part_2.py
src/2022/day_1/: day_1.py
src/2022/day_10/: part_1.py  part_2.py
src/2022/day_11/: part_1.py  part_2.py
src/2022/day_12/: part_1.py  part_2.py
src/2022/day_13/: part_1.py  part_2.py
src/2022/day_14/: part_1.py  part_2.py
src/2022/day_16/: part_1.py  part_1_take_2.py  part_2_take_2.py
src/2022/day_17/: part_1.py  part_2.py  part_2_take_2.py  part_2_take_3.py
src/2022/day_19/: part_1.py  part_2.py
src/2022/day_2/: day_2.py
src/2022/day_20/: part_1.py  part_2.py
src/2022/day_21/: part_1.py  part_2.py
src/2022/day_22/: part_1.py  part_2.py
src/2022/day_23/: part_1.py  part_2.py
src/2022/day_3/: part_1.py
src/2022/day_5/: part_1.py  part_2.py
src/2022/day_7/: part_1.py  part_2.py
src/utils/: minheap.py  utils.py
(+122 files in other folders)
